--- a/src/insect_detection_app/pubspec.yaml
+++ b/src/insect_detection_app/pubspec.yaml
@@ -11,11 +11,16 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
+  equatable: ^2.0.5
+  internet_connection_checker: ^1.0.0+1
+  supabase_flutter: ^2.0.2
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  mocktail: ^1.0.2
 
 flutter:
   uses-material-design: true
